--- a/C35/sourceData.plist
+++ b/C35/sourceData.plist
@@ -1,14 +1,61 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE plist PUBLIC "-//Apple Computer//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
-<!--
-   sourceData.plist
-   C35
-
-   Created by TimeMachine on 2018/3/30.
-   Copyright (c) 2018年 TimeMachine. All rights reserved.
--->
+<!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
+<array>
+	<dict>
+		<key>numberArr</key>
+		<array>
+            <string>4</string>
+            <string>3</string>
+            <string>3</string>
+            <string>2</string>
+		</array>
+		<key>result</key>
+		<string>（2+3）*（3+4）</string>
+	</dict>
     <dict>
-    
+        <key>numberArr</key>
+        <array>
+            <string>4</string>
+            <string>3</string>
+            <string>4</string>
+            <string>1</string>
+        </array>
+        <key>result</key>
+        <string>（1+4）*（3+4）</string>
     </dict>
+    <dict>
+        <key>numberArr</key>
+        <array>
+            <string>2</string>
+            <string>3</string>
+            <string>6</string>
+            <string>1</string>
+        </array>
+        <key>result</key>
+        <string>（2+3）*（1+6）</string>
+    </dict>
+    <dict>
+        <key>numberArr</key>
+        <array>
+            <string>2</string>
+            <string>3</string>
+            <string>2</string>
+            <string>5</string>
+        </array>
+        <key>result</key>
+        <string>（2+3）*（2+5）</string>
+    </dict>
+    <dict>
+        <key>numberArr</key>
+        <array>
+            <string>6</string>
+            <string>8</string>
+            <string>1</string>
+            <string>1</string>
+        </array>
+        <key>result</key>
+        <string>（6-1）*（8-1）</string>
+    </dict>
+</array>
 </plist>
