--- a/C35/sourceData.plist
+++ b/C35/sourceData.plist
@@ -5,57 +5,354 @@
 	<dict>
 		<key>numberArr</key>
 		<array>
-            <string>4</string>
-            <string>3</string>
-            <string>3</string>
-            <string>2</string>
+			<string>4</string>
+			<string>3</string>
+			<string>3</string>
+			<string>2</string>
 		</array>
 		<key>result</key>
 		<string>（2+3）*（3+4）</string>
 	</dict>
-    <dict>
-        <key>numberArr</key>
-        <array>
-            <string>4</string>
-            <string>3</string>
-            <string>4</string>
-            <string>1</string>
-        </array>
-        <key>result</key>
-        <string>（1+4）*（3+4）</string>
-    </dict>
-    <dict>
-        <key>numberArr</key>
-        <array>
-            <string>2</string>
-            <string>3</string>
-            <string>6</string>
-            <string>1</string>
-        </array>
-        <key>result</key>
-        <string>（2+3）*（1+6）</string>
-    </dict>
-    <dict>
-        <key>numberArr</key>
-        <array>
-            <string>2</string>
-            <string>3</string>
-            <string>2</string>
-            <string>5</string>
-        </array>
-        <key>result</key>
-        <string>（2+3）*（2+5）</string>
-    </dict>
-    <dict>
-        <key>numberArr</key>
-        <array>
-            <string>6</string>
-            <string>8</string>
-            <string>1</string>
-            <string>1</string>
-        </array>
-        <key>result</key>
-        <string>（6-1）*（8-1）</string>
-    </dict>
+	<dict>
+		<key>numberArr</key>
+		<array>
+			<string>4</string>
+			<string>3</string>
+			<string>4</string>
+			<string>1</string>
+		</array>
+		<key>result</key>
+		<string>（1+4）*（3+4）</string>
+	</dict>
+	<dict>
+		<key>numberArr</key>
+		<array>
+			<string>2</string>
+			<string>3</string>
+			<string>6</string>
+			<string>1</string>
+		</array>
+		<key>result</key>
+		<string>（2+3）*（1+6）</string>
+	</dict>
+	<dict>
+		<key>numberArr</key>
+		<array>
+			<string>2</string>
+			<string>3</string>
+			<string>2</string>
+			<string>5</string>
+		</array>
+		<key>result</key>
+		<string>（2+3）*（2+5）</string>
+	</dict>
+	<dict>
+		<key>numberArr</key>
+		<array>
+			<string>6</string>
+			<string>8</string>
+			<string>1</string>
+			<string>1</string>
+		</array>
+		<key>result</key>
+		<string>（6-1）*（8-1）</string>
+	</dict>
+	<dict>
+		<key>numberArr</key>
+		<array>
+			<string>7</string>
+			<string>2</string>
+			<string>8</string>
+			<string>1</string>
+		</array>
+		<key>result</key>
+		<string>（7-2）*（8-1）</string>
+	</dict>
+	<dict>
+		<key>numberArr</key>
+		<array>
+			<string>8</string>
+			<string>8</string>
+			<string>3</string>
+			<string>1</string>
+		</array>
+		<key>result</key>
+		<string>（8-1）*（8-3）</string>
+	</dict>
+	<dict>
+		<key>numberArr</key>
+		<array>
+			<string>6</string>
+			<string>8</string>
+			<string>1</string>
+			<string>1</string>
+		</array>
+		<key>result</key>
+		<string>（6-1）*（8-1）</string>
+	</dict>
+	<dict>
+		<key>numberArr</key>
+		<array>
+			<string>9</string>
+			<string>4</string>
+			<string>8</string>
+			<string>1</string>
+		</array>
+		<key>result</key>
+		<string>（8-1）*（9-4）</string>
+	</dict>
+	<dict>
+		<key>numberArr</key>
+		<array>
+			<string>6</string>
+			<string>8</string>
+			<string>1</string>
+			<string>1</string>
+		</array>
+		<key>result</key>
+		<string>（6-1）*（8-1）</string>
+	</dict>
+	<dict>
+		<key>numberArr</key>
+		<array>
+			<string>6</string>
+			<string>9</string>
+			<string>2</string>
+			<string>1</string>
+		</array>
+		<key>result</key>
+		<string>（6-1）*（9-2）</string>
+	</dict>
+	<dict>
+		<key>numberArr</key>
+		<array>
+			<string>7</string>
+			<string>2</string>
+			<string>9</string>
+			<string>2</string>
+		</array>
+		<key>result</key>
+		<string>（7-2）*（9-2）</string>
+	</dict>
+	<dict>
+		<key>numberArr</key>
+		<array>
+			<string>8</string>
+			<string>3</string>
+			<string>9</string>
+			<string>2</string>
+		</array>
+		<key>result</key>
+		<string>（8-3）*（9-2）</string>
+	</dict>
+	<dict>
+		<key>numberArr</key>
+		<array>
+			<string>9</string>
+			<string>4</string>
+			<string>9</string>
+			<string>2</string>
+		</array>
+		<key>result</key>
+		<string>（9-4）*（9-2）</string>
+	</dict>
+	<dict>
+		<key>numberArr</key>
+		<array>
+			<string>1</string>
+			<string>5</string>
+			<string>3</string>
+			<string>4</string>
+		</array>
+		<key>result</key>
+		<string>（4+3）* 1*5</string>
+	</dict>
+	<dict>
+		<key>numberArr</key>
+		<array>
+			<string>6</string>
+			<string>5</string>
+			<string>1</string>
+			<string>1</string>
+		</array>
+		<key>result</key>
+		<string>（6+1）*5*1 </string>
+	</dict>
+	<dict>
+		<key>numberArr</key>
+		<array>
+			<string>5</string>
+			<string>5</string>
+			<string>2</string>
+			<string>1</string>
+		</array>
+		<key>result</key>
+		<string>（5+2）*（5*1）</string>
+	</dict>
+	<dict>
+		<key>numberArr</key>
+		<array>
+			<string>6</string>
+			<string>8</string>
+			<string>1</string>
+			<string>1</string>
+		</array>
+		<key>result</key>
+		<string>（6-1）*（8-1）</string>
+	</dict>
+	<dict>
+		<key>numberArr</key>
+		<array>
+			<string>5</string>
+			<string>8</string>
+			<string>1</string>
+			<string>1</string>
+		</array>
+		<key>result</key>
+		<string>（5*1）*（8-1）</string>
+	</dict>
+	<dict>
+		<key>numberArr</key>
+		<array>
+			<string>2</string>
+			<string>9</string>
+			<string>5</string>
+			<string>1</string>
+		</array>
+		<key>result</key>
+		<string>（5*1）*（9-2）</string>
+	</dict>
+	<dict>
+		<key>numberArr</key>
+		<array>
+			<string>2</string>
+			<string>3</string>
+			<string>7</string>
+			<string>1</string>
+		</array>
+		<key>result</key>
+		<string>（3+2）*（7*1）</string>
+	</dict>
+	<dict>
+		<key>numberArr</key>
+		<array>
+			<string>4</string>
+			<string>7</string>
+			<string>1</string>
+			<string>1</string>
+		</array>
+		<key>result</key>
+		<string>（4+1）*（7*1）</string>
+	</dict>
+	<dict>
+		<key>numberArr</key>
+		<array>
+			<string>6</string>
+			<string>7</string>
+			<string>1</string>
+			<string>1</string>
+		</array>
+		<key>result</key>
+		<string>（6-1）*（7*1）</string>
+	</dict>
+	<dict>
+		<key>numberArr</key>
+		<array>
+			<string>6</string>
+			<string>8</string>
+			<string>1</string>
+			<string>1</string>
+		</array>
+		<key>result</key>
+		<string>（6-1）*（8-1）</string>
+	</dict>
+	<dict>
+		<key>numberArr</key>
+		<array>
+			<string>7</string>
+			<string>7</string>
+			<string>2</string>
+			<string>1</string>
+		</array>
+		<key>result</key>
+		<string>（7*1）*（7-2）</string>
+	</dict>
+	<dict>
+		<key>numberArr</key>
+		<array>
+			<string>3</string>
+			<string>8</string>
+			<string>7</string>
+			<string>1</string>
+		</array>
+		<key>result</key>
+		<string>（7*1）*（8-3）</string>
+	</dict>
+	<dict>
+		<key>numberArr</key>
+		<array>
+			<string>9</string>
+			<string>4</string>
+			<string>1</string>
+			<string>7</string>
+		</array>
+		<key>result</key>
+		<string>（9-4）*（7*1）</string>
+	</dict>
+	<dict>
+		<key>numberArr</key>
+		<array>
+			<string>4</string>
+			<string>3</string>
+			<string>3</string>
+			<string>1</string>
+		</array>
+		<key>result</key>
+		<string>4*3*3-1</string>
+	</dict>
+	<dict>
+		<key>numberArr</key>
+		<array>
+			<string>4</string>
+			<string>3</string>
+			<string>6</string>
+			<string>1</string>
+		</array>
+		<key>result</key>
+		<string>4*(3+6)-1</string>
+	</dict>
+	<dict>
+		<key>numberArr</key>
+		<array>
+			<string>4</string>
+			<string>8</string>
+			<string>1</string>
+			<string>1</string>
+		</array>
+		<key>result</key>
+		<string>4*（8+1）-1</string>
+	</dict>
+	<dict>
+		<key>numberArr</key>
+		<array>
+			<string>4</string>
+			<string>2</string>
+			<string>7</string>
+			<string>1</string>
+		</array>
+		<key>result</key>
+		<string>（2+7）*4 -1</string>
+	</dict>
+	<dict>
+		<key>numberArr</key>
+		<array>
+			<string>4</string>
+			<string>5</string>
+			<string>4</string>
+			<string>1</string>
+		</array>
+		<key>result</key>
+		<string>（4+5）*4 -1</string>
+	</dict>
 </array>
 </plist>
